--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+*{
+  margin:0;
+  padding:0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  justify-content:space-around ;
+  align-content: center;
 }
+.card-container {
+  width: 20vw;
+  height: 20vh;
+  border: solid black 1px;
+  text-align: center;
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title {
+  text-transform: uppercase;
+}
+.message {
+  color:#ffffff;
+  background-color: rgb(55, 151, 42);
+}
+.err-message {
+  color:#ffffff;
+  background-color: rgb(253, 30, 30);
+}
+.err {
+  color:rgb(253, 30, 30);
 }
