--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,10 @@
 }
 .container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content:space-around ;
-  align-content: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 100px 0 0 0;
+    gap: 40px;
 }
 .card-container {
   width: 20vw;
